--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Blank Template",
-    "slug": "mobile",
+    "name": "Be the Hero",
+    "slug": "bethehero",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
