--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^25.2.4",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
   },
